--- a/beta/ontu-stats.html
+++ b/beta/ontu-stats.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
+
 <html lang="ko">
-
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>대출 통계 | 온투업 P2P 담보대출 통계 상세</title>
-  <meta name="description" content="온라인투자연계금융업(P2P) 담보대출의 누적 대출금액, 상환금액, 대출잔액과 상품유형별 대출잔액을 월별로 확인할 수 있는 대출 통계 페이지입니다.">
-  <meta name="robots" content="noindex, nofollow" />
-  <link rel="stylesheet" href="/assets/styles.css?v=20260108-02" />
-
-  <style>/* ===== 온투업 대출 통계: 배너(비디오) + 기준월 선택을 배너 내부로 ===== */
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>대출 통계 | 온투업 P2P 담보대출 통계 상세</title>
+<meta content="온라인투자연계금융업(P2P) 담보대출의 누적 대출금액, 상환금액, 대출잔액과 상품유형별 대출잔액을 월별로 확인할 수 있는 대출 통계 페이지입니다." name="description"/>
+<meta content="noindex, nofollow" name="robots">
+<link href="/assets/styles.css?v=20260108-02" rel="stylesheet"/>
+<style>/* ===== 온투업 대출 통계: 배너(비디오) + 기준월 선택을 배너 내부로 ===== */
     .ontu-stats-page .sr-only {
       position: absolute !important;
       width: 1px !important;
@@ -139,139 +138,178 @@
 .page-ontu-stats .beta-section--filter { margin-top: 0; }
 .page-ontu-stats .beta-stats-hero { margin-top: 0; }
 
+
+
+/* === 모바일 month picker: 네이티브 아이콘 공간 문제 해결을 위해 텍스트 칩을 별도 렌더링 === */
+.ontu-stats-page .beta-month-picker--hero { position: relative; }
+.ontu-stats-page .beta-month-picker--hero .beta-month-chip-text { display: none; }
+
+@media (max-width: 768px) {
+  /* 모바일에서는 input을 투명 오버레이로 두고, 실제 보이는 칩은 span으로 렌더 */
+  .ontu-stats-page .beta-month-picker--hero input[type="month"] {
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    padding: 0 !important;
+    margin: 0;
+    border: 0;
+    background: transparent;
+    -webkit-appearance: none !important;
+    appearance: none !important;
+  }
+  .ontu-stats-page .beta-month-picker--hero .beta-month-chip-text {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    height: 28px; /* 기존 대비 추가로 더 슬림하게 */
+    padding: 0 14px;
+    border-radius: 999px;
+    border: 1px solid rgba(15, 23, 42, 0.14);
+    background: rgba(255, 255, 255, 0.82);
+    backdrop-filter: blur(6px);
+    box-shadow: 0 8px 18px rgba(15, 23, 42, 0.12);
+    font-weight: 800;
+    font-size: 16px;
+    line-height: 1;
+    color: #0f172a;
+    white-space: nowrap;
+  }
+}
 </style>
-
-  <script src="/assets/beta-shell.js?v=20260107" defer></script>
-</head>
-
+<script defer="" src="/assets/beta-shell.js?v=20260107"></script>
+</meta></head>
 <body class="beta-body ontu-stats-page page-ontu-stats">
-
-  <!-- 상단 헤더 -->
-  <header class="huchu-header beta-header" role="banner">
-    <div class="huchu-header__inner beta-header__inner">
-      <a href="/beta/index.html" class="huchu-logo" aria-label="후추 Huchu 홈">
-        <img class="logo-img" src="/assets/logo/huchu-logo.png" alt="후추 로고" />
-        <span class="logo-fallback">
-          <span class="logo-mark">%</span>
-          <span class="logo-text">후추 Huchu</span>
-        </span>
-      </a>
-
-      <!-- MENU + 드롭다운 -->
-      <button id="betaMenuToggle"
-              class="beta-menu-toggle"
-              type="button"
-              aria-haspopup="true"
-              aria-expanded="false">
-        <span class="beta-menu-toggle__label">MENU</span>
-      </button>
-
-      <div id="betaMenuPanel" class="beta-menu-panel hide">
-        <a class="beta-menu-link" href="/beta/ontu-stats.html">온투업 대출 통계</a>
-        <a class="beta-menu-link" href="/beta/products/index.html">온투업 대출상품 정보</a>
-        <a class="beta-menu-link" href="/beta/navi-beta.html">후추 네비게이션</a>
-        <a class="beta-menu-link" href="/company.html">회사소개</a>
-        <a class="beta-menu-link" href="/contact.html">광고문의</a>
-        <a class="beta-menu-link" href="/beta/admin-beta.html">관리자</a>
-      </div>
-    </div>
-  </header>
-
-  <main class="beta-inner">
-    <!-- 상단 타이틀 + 기준월 선택 -->
-    <section class="beta-section beta-section--filter">
-      <div class="beta-stats-hero" aria-label="대출 통계 배너">
-        <div class="beta-stats-hero__banner" role="img" aria-label="대출 통계 배너">
-          <!-- NOTE: 아래 mp4 파일을 레포에 추가하세요: /assets/media/ontu-stats-hero.mp4 -->
-          <video class="beta-stats-hero__video" autoplay muted playsinline preload="metadata" poster="/assets/media/ontu-stats-hero.jpg?v=20260107">
-            <source src="/assets/media/ontu-stats-hero.mp4?v=20260107" type="video/mp4" />
-          </video>
-        </div>
-
-        <!-- 기준월 선택: 배너 내부(하단 중앙) -->
-        <div class="beta-stats-hero__controls">
-          <div class="beta-month-picker beta-month-picker--hero">
-            <label for="ontuMonthInput" class="sr-only">기준월</label>
-            <input
-              type="month"
-              id="ontuMonthInput"
-              name="ontuMonthInput"
-              aria-label="기준월 선택"
-            />
-          </div>
-        </div>
-
-        <!-- 접근성(스크린리더) -->
-        <h1 class="sr-only">대출 통계</h1>
-        <p class="sr-only">전체 온라인투자연계금융업(P2P)의 대출 현황을 확인할 수 있습니다.</p>
-      </div>
-    </section>
-
-    <!-- 대출 현황 패널 -->
-    <section class="beta-section">
-      <div class="stats-panel stats-panel--loan">
-        <div class="stats-panel__header">
-          <h2 class="stats-panel__title">대출 현황</h2>
-          <!-- 패널 내부의 'YYYY년 M월 기준' 텍스트 제거: stats-panel__meta 삭제 -->
-        </div>
-
-        <div class="stats-panel__body stats-panel__slider stats-panel__slider--loan">
-          <div class="stats-panel__viewport">
-            <div class="stats-panel__track stats-panel__track--loan" id="ontuLoanTrack">
-              <!-- JS에서 카드 삽입 -->
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- 상품유형별 대출잔액 패널 -->
-    <section class="beta-section">
-      <div class="stats-panel stats-panel--products">
-        <div class="stats-panel__header">
-          <h2 class="stats-panel__title">상품유형별 대출잔액</h2>
-          <!-- 패널 내부의 'YYYY년 M월 기준' 텍스트 제거: stats-panel__meta 삭제 -->
-        </div>
-
-        <div class="stats-panel__body stats-panel__slider stats-panel__slider--products">
-          <div class="stats-panel__viewport">
-            <div class="stats-panel__track stats-panel__track--products" id="ontuProductTrack">
-              <!-- JS에서 카드 삽입 -->
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- 출처 텍스트 -->
-    <div class="ontu-source-note">
+<!-- 상단 헤더 -->
+<header class="huchu-header beta-header" role="banner">
+<div class="huchu-header__inner beta-header__inner">
+<a aria-label="후추 Huchu 홈" class="huchu-logo" href="/beta/index.html">
+<img alt="후추 로고" class="logo-img" src="/assets/logo/huchu-logo.png"/>
+<span class="logo-fallback">
+<span class="logo-mark">%</span>
+<span class="logo-text">후추 Huchu</span>
+</span>
+</a>
+<!-- MENU + 드롭다운 -->
+<button aria-expanded="false" aria-haspopup="true" class="beta-menu-toggle" id="betaMenuToggle" type="button">
+<span class="beta-menu-toggle__label">MENU</span>
+</button>
+<div class="beta-menu-panel hide" id="betaMenuPanel">
+<a class="beta-menu-link" href="/beta/ontu-stats.html">온투업 대출 통계</a>
+<a class="beta-menu-link" href="/beta/products/index.html">온투업 대출상품 정보</a>
+<a class="beta-menu-link" href="/beta/navi-beta.html">후추 네비게이션</a>
+<a class="beta-menu-link" href="/company.html">회사소개</a>
+<a class="beta-menu-link" href="/contact.html">광고문의</a>
+<a class="beta-menu-link" href="/beta/admin-beta.html">관리자</a>
+</div>
+</div>
+</header>
+<main class="beta-inner">
+<!-- 상단 타이틀 + 기준월 선택 -->
+<section class="beta-section beta-section--filter">
+<div aria-label="대출 통계 배너" class="beta-stats-hero">
+<div aria-label="대출 통계 배너" class="beta-stats-hero__banner" role="img">
+<!-- NOTE: 아래 mp4 파일을 레포에 추가하세요: /assets/media/ontu-stats-hero.mp4 -->
+<video autoplay="" class="beta-stats-hero__video" muted="" playsinline="" poster="/assets/media/ontu-stats-hero.jpg?v=20260107" preload="metadata">
+<source src="/assets/media/ontu-stats-hero.mp4?v=20260107" type="video/mp4"/>
+</video>
+</div>
+<!-- 기준월 선택: 배너 내부(하단 중앙) -->
+<div class="beta-stats-hero__controls">
+<div class="beta-month-picker beta-month-picker--hero">
+<label class="sr-only" for="ontuMonthInput">기준월</label>
+<input aria-label="기준월 선택" id="ontuMonthInput" name="ontuMonthInput" type="month"/>
+<span aria-hidden="true" class="beta-month-chip-text"></span></div>
+</div>
+<!-- 접근성(스크린리더) -->
+<h1 class="sr-only">대출 통계</h1>
+<p class="sr-only">전체 온라인투자연계금융업(P2P)의 대출 현황을 확인할 수 있습니다.</p>
+</div>
+</section>
+<!-- 대출 현황 패널 -->
+<section class="beta-section">
+<div class="stats-panel stats-panel--loan">
+<div class="stats-panel__header">
+<h2 class="stats-panel__title">대출 현황</h2>
+<!-- 패널 내부의 'YYYY년 M월 기준' 텍스트 제거: stats-panel__meta 삭제 -->
+</div>
+<div class="stats-panel__body stats-panel__slider stats-panel__slider--loan">
+<div class="stats-panel__viewport">
+<div class="stats-panel__track stats-panel__track--loan" id="ontuLoanTrack">
+<!-- JS에서 카드 삽입 -->
+</div>
+</div>
+</div>
+</div>
+</section>
+<!-- 상품유형별 대출잔액 패널 -->
+<section class="beta-section">
+<div class="stats-panel stats-panel--products">
+<div class="stats-panel__header">
+<h2 class="stats-panel__title">상품유형별 대출잔액</h2>
+<!-- 패널 내부의 'YYYY년 M월 기준' 텍스트 제거: stats-panel__meta 삭제 -->
+</div>
+<div class="stats-panel__body stats-panel__slider stats-panel__slider--products">
+<div class="stats-panel__viewport">
+<div class="stats-panel__track stats-panel__track--products" id="ontuProductTrack">
+<!-- JS에서 카드 삽입 -->
+</div>
+</div>
+</div>
+</div>
+</section>
+<!-- 출처 텍스트 -->
+<div class="ontu-source-note">
       ※출처: 온라인투자연계금융업 중앙기록관리기관
     </div>
-  </main>
+</main>
+<!-- 공통 푸터 -->
+<footer class="beta-footer" role="contentinfo">
+<div class="beta-footer__top">
+<a href="/company.html">회사소개</a>
+<a href="/terms.html">서비스이용약관</a>
+<a href="/privacy.html">개인정보 취급방침</a>
+</div>
+<div class="beta-footer__bottom">
+<div class="beta-footer__brand">
+<img alt="HUCHU 로고" class="beta-footer__logo-img" src="/assets/logo/huchu-logo-white.png"/>
+<span class="beta-footer__logo-text">HUCHU</span>
+</div>
+<div class="beta-footer__info">
+<p>상호: (예시) 후추랩 | 대표: 장현성</p>
+<p>주소: (예시) 경기도 고양시 일산동구 00로 00</p>
+<p>E-MAIL: huchudb01@gmail.com | 사업자번호: 000-00-00000</p>
+<p>2025 © HUCHU. ALL RIGHTS RESERVED.</p>
+</div>
+</div>
+</footer>
+<script src="/assets/ontu-stats.js?v=20260108-02"></script>
+<script>
+(function(){
+  function fmtMonth(ym){
+    if(!ym) return '';
+    var parts = String(ym).split('-');
+    if(parts.length < 2) return '';
+    var y = parts[0];
+    var m = parseInt(parts[1], 10);
+    if(!y || !m) return '';
+    return y + '년 ' + m + '월';
+  }
+  function sync(){
+    var input = document.getElementById('ontuMonthInput');
+    var textEl = document.querySelector('.beta-month-picker--hero .beta-month-chip-text');
+    if(!input || !textEl) return;
+    var label = fmtMonth(input.value);
+    if(label) textEl.textContent = label;
+  }
+  document.addEventListener('DOMContentLoaded', sync);
+  document.addEventListener('ontuStatsRendered', sync);
+  document.addEventListener('change', function(e){
+    if(e && e.target && e.target.id === 'ontuMonthInput') sync();
+  }, true);
+})();
+</script>
 
-  <!-- 공통 푸터 -->
-  <footer class="beta-footer" role="contentinfo">
-    <div class="beta-footer__top">
-      <a href="/company.html">회사소개</a>
-      <a href="/terms.html">서비스이용약관</a>
-      <a href="/privacy.html">개인정보 취급방침</a>
-    </div>
-    <div class="beta-footer__bottom">
-      <div class="beta-footer__brand">
-        <img src="/assets/logo/huchu-logo-white.png"
-             alt="HUCHU 로고"
-             class="beta-footer__logo-img" />
-        <span class="beta-footer__logo-text">HUCHU</span>
-      </div>
-      <div class="beta-footer__info">
-        <p>상호: (예시) 후추랩 | 대표: 장현성</p>
-        <p>주소: (예시) 경기도 고양시 일산동구 00로 00</p>
-        <p>E-MAIL: huchudb01@gmail.com | 사업자번호: 000-00-00000</p>
-        <p>2025 © HUCHU. ALL RIGHTS RESERVED.</p>
-      </div>
-    </div>
-  </footer>
-
-  <script src="/assets/ontu-stats.js?v=20260108-02"></script>
 </body>
 </html>
