--- a/beta/navi-beta.html
+++ b/beta/navi-beta.html
@@ -65,19 +65,16 @@
 
       <!-- 인트로 -->
       <section class="beta-section">
-        <div class="beta-card beta-card--wide">
-          <h1 class="beta-section__title" style="font-size:18px;margin-bottom:6px;">
-            후추 네비게이션 (베타)
-          </h1>
-          <p style="margin:0 0 4px;font-size:13px;color:#4b5563;">
-            입력하신 조건에 맞춰 <strong>온투업 대출상품·온투업체</strong>를 탐색해주는 네비게이션 도우미입니다.
-          </p>
-          <p style="margin:0;font-size:11px;color:#9ca3af;">
-            · 1~6단계까지 간단히 선택·입력하면, 7단계에서 추천 가능한 온투업체를 보여드립니다.
-          </p>
-          <p style="margin:6px 0 0;font-size:11px;color:#9ca3af;">
-            · 실제 대출 승인 여부는 각 온투업체의 심사 기준에 따라 달라질 수 있습니다.
-          </p>
+        <div class="beta-card beta-card--wide navi-intro-card">
+          <img
+            class="navi-intro-banner"
+            src="/assets/media/navi-intro-banner.png"
+            alt="후추 네비게이션 (베타)"
+            width="2500"
+            height="300"
+            loading="eager"
+            decoding="async"
+          />
         </div>
       </section>
 
