--- a/beta/navi-beta.html
+++ b/beta/navi-beta.html
@@ -64,12 +64,12 @@
     <div class="beta-inner navi-main">
 
       <!-- 인트로 -->
-      <section class="beta-section">
+      <section class="beta-section navi-intro-section">
         <div class="beta-card beta-card--wide navi-intro-card">
           <img
             class="navi-intro-banner"
             src="/assets/media/navi-intro-banner.png"
-            alt="후추 네비게이션 (베타)"
+            alt="후추 네비게이션"
             width="2500"
             height="300"
             loading="eager"
