--- a/beta/products/apt-auction.html
+++ b/beta/products/apt-auction.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>아파트 경락잔금대출 | 온투업 P2P 담보대출 상품정보 (베타)</title>
-  <meta name="description" content="법원경매로 낙찰받은 아파트의 잔금 및 추가 취득비용을 마련하기 위한 온투업(P2P) 경락잔금대출 상품의 한도, 금리, 상환 방식, 후순위 구조를 정리한 베타 설명 페이지입니다. 아파트경락잔금대출, 낙찰잔금대출, 경락자금대출, 후순위담보대출 비교.">
+  <title>아파트 경락잔금대출 | 온투업 P2P 담보대출 상품정보</title>
+  <meta name="description" content="경매로 낙찰받은 아파트의 잔금 및 추가 취득비용을 마련하기 위한 온투업(P2P) 경락잔금대출 상품의 한도, 금리, 상환 방식 등을 설명 페이지입니다. 아파트경락잔금대출, 낙찰잔금대출, 경락자금대출, 후순위담보대출 비교.">
   <!-- 베타용: 검색엔진 인덱싱 방지 -->
   <meta name="robots" content="noindex, nofollow" />
 
@@ -33,12 +33,11 @@
 </button>
 
         <div id="betaMenuPanel" class="beta-menu-panel hide">
-          <a class="beta-menu-link" href="/beta/">온투업 대출통계</a>
-          <a class="beta-menu-link" href="/beta/products/">온투업 대출상품정보</a>
-          <a class="beta-menu-link" href="/">담보대출 계산기</a>
+          <a class="beta-menu-link" href="/beta/ontu-stats.html">온투업 대출통계</a>
+          <a class="beta-menu-link" href="/beta/products/index.html">온투업 대출상품정보</a>
+          <a class="beta-menu-link" href="/beta/navi-beta.html">후추 네비게이션</a>
           <a class="beta-menu-link" href="/company.html">회사소개</a>
           <a class="beta-menu-link" href="/contact.html">광고문의</a>
-          <a class="beta-menu-link" href="/beta/admin-beta.html">관리자(베타)</a>
         </div>
       </div>
     </div>
@@ -54,7 +53,6 @@
         <p class="hero-intro">
           온라인투자연계금융업(이하 ‘온투업’) 아파트 담보대출 상품 중
           <strong>경락잔금대출</strong>에 관한 정보입니다.</br>
-          법원 경매, 공매로 아파트를 낙찰받은 후 <strong>잔금 등 추가자금</strong>을 마련할 때 활용되는 상품입니다.
         </p>
 
         <!-- 항목 앞에 · 과 Ι 적용 -->
@@ -76,13 +74,13 @@
       </article>
     </section>
 
-    <!-- 담보대출계산기 안내: 히어로 바로 아래 -->
+    <!-- 후추 네비게이션 안내: 히어로 바로 아래 -->
     <section class="products-section">
       <div class="calculator-section-grid">
-        <!-- 왼쪽: 후추 담보대출 계산기 안내 -->
+        <!-- 왼쪽: 후추 네비게이션 안내 -->
         <article class="product-info-card calculator-card">
-          <h2 class="products-section__title">후추 담보대출 계산기로 확인하세요.</h2>
-          <h3 style="margin-bottom:10px;">낙찰받은 아파트의 잔금·추가자금 한도 가늠</h3>
+          <h2 class="products-section__title">후추 네비게이션을 활용하세요.</h2>
+          <h3 style="margin-bottom:10px;">낙찰받은 아파트의 잔금·추가자금 등 확인</h3>
           <ul>
             <li>개인정보 입력 <strong>NO</strong></li>
             <li>신용점수영향 <strong>NO</strong></li>
@@ -166,7 +164,7 @@
         </article>
 
         <article class="product-info-card">
-          <h3>Q. 후추 담보대출 계산기로 경락잔금대출도 확인 가능한가요?</h3>
+          <h3>Q. 후추 네비게이션으로 경락잔금대출도 확인 가능한가요?</h3>
           <p>
             네. 가능합니다.
           </p>
@@ -220,10 +218,10 @@
         <span class="beta-footer__logo-text">HUCHU</span>
       </div>
       <div class="beta-footer__info">
-        <p>상호: (예시) 후추랩 | 대표: 장현성</p>
-        <p>주소: (예시) 경기도 고양시 일산동구 00로 00</p>
-        <p>E-MAIL: huchudb01@gmail.com | 사업자번호: 000-00-00000</p>
-        <p>2025 © HUCHU. ALL RIGHTS RESERVED.</p>
+         <p>상호: 후추랩 | 대표: 장현성</p>
+         <p>주소: 경기도 고양시 일산동구 정발산로 15, 4층 411호</p>
+         <p>E-MAIL: support@huchulab.com | 사업자번호: 546-03-03940</p>
+         <p>2025 © HUCHU. ALL RIGHTS RESERVED.</p>
       </div>
     </div>
   </footer>
