--- a/beta/products/apt-auction.html
+++ b/beta/products/apt-auction.html
@@ -204,6 +204,7 @@
 
   </main>
 
+ <!-- 푸터 -->
   <footer class="beta-footer" role="contentinfo">
     <div class="beta-footer__top">
       <a href="/company.html">회사소개</a>
@@ -212,16 +213,18 @@
     </div>
     <div class="beta-footer__bottom">
       <div class="beta-footer__brand">
-        <img src="/assets/logo/huchu-logo-white.png"
-             alt="HUCHU 로고"
-             class="beta-footer__logo-img" />
+        <img
+          src="/assets/logo/huchu-logo-white.png"
+          alt="HUCHU 로고"
+          class="beta-footer__logo-img"
+        />
         <span class="beta-footer__logo-text">HUCHU</span>
       </div>
       <div class="beta-footer__info">
-         <p>상호: 후추랩 | 대표: 장현성</p>
-         <p>주소: 경기도 고양시 일산동구 정발산로 15, 4층 411호</p>
-         <p>E-MAIL: support@huchulab.com | 사업자번호: 546-03-03940</p>
-         <p>2025 © HUCHU. ALL RIGHTS RESERVED.</p>
+        <p>상호: 후추랩 | 대표: 장현성</p>
+        <p>주소: 경기도 고양시 일산동구 정발산로 15, 4층 411호</p>
+        <p>E-MAIL: support@huchulab.com | 사업자번호: 546-03-03940</p>
+        <p>2025 © HUCHU. ALL RIGHTS RESERVED.</p>
       </div>
     </div>
   </footer>
