Update footer and menu links in apt-deposit.html

--- a/beta/products/apt-deposit.html
+++ b/beta/products/apt-deposit.html
@@ -33,12 +33,11 @@
 </button>
 
         <div id="betaMenuPanel" class="beta-menu-panel hide">
-          <a class="beta-menu-link" href="/beta/">온투업 대출통계</a>
-          <a class="beta-menu-link" href="/beta/products/">온투업 대출상품정보</a>
-          <a class="beta-menu-link" href="/">담보대출 계산기</a>
+          <a class="beta-menu-link" href="/beta/ontu-stats.html">온투업 대출통계</a>
+          <a class="beta-menu-link" href="/beta/products/index.html">온투업 대출상품정보</a>
+          <a class="beta-menu-link" href="/beta/navi-beta.html">후추 네비게이션</a>
           <a class="beta-menu-link" href="/company.html">회사소개</a>
           <a class="beta-menu-link" href="/contact.html">광고문의</a>
-          <a class="beta-menu-link" href="/beta/admin-beta.html">관리자</a>
         </div>
       </div>
     </div>
@@ -291,6 +290,7 @@
 
   </main>
 
+  <!-- 푸터 -->
   <footer class="beta-footer" role="contentinfo">
     <div class="beta-footer__top">
       <a href="/company.html">회사소개</a>
@@ -299,19 +299,22 @@
     </div>
     <div class="beta-footer__bottom">
       <div class="beta-footer__brand">
-        <img src="/assets/logo/huchu-logo-white.png"
-             alt="HUCHU 로고"
-             class="beta-footer__logo-img" />
+        <img
+          src="/assets/logo/huchu-logo-white.png"
+          alt="HUCHU 로고"
+          class="beta-footer__logo-img"
+        />
         <span class="beta-footer__logo-text">HUCHU</span>
       </div>
       <div class="beta-footer__info">
-        <p>상호: (예시) 후추랩 | 대표: 장현성</p>
-        <p>주소: (예시) 경기도 고양시 일산동구 00로 00</p>
-        <p>E-MAIL: huchudb01@gmail.com | 사업자번호: 000-00-00000</p>
+        <p>상호: 후추랩 | 대표: 장현성</p>
+        <p>주소: 경기도 고양시 일산동구 정발산로 15, 4층 411호</p>
+        <p>E-MAIL: support@huchulab.com | 사업자번호: 546-03-03940</p>
         <p>2025 © HUCHU. ALL RIGHTS RESERVED.</p>
       </div>
     </div>
   </footer>
+
 
   <script>
     // 베타 메뉴 토글
