--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -9,7 +9,9 @@
   <meta name="robots" content="noindex, nofollow" />
 
   <link rel="stylesheet" href="/assets/styles.css?v=20251117-beta" />
+  <script type="module" src="/assets/beta-shell.js?v=20260106-menu2"></script>
 </head>
+  
 <body class="beta-body">
 
   <!-- 상단 헤더 (베타 공통) -->
