--- a/beta/products/commercial-auction.html
+++ b/beta/products/commercial-auction.html
@@ -9,8 +9,9 @@
   <meta name="robots" content="noindex, nofollow" />
 
   <link rel="stylesheet" href="/assets/styles.css?v=20251117-beta" />
+  <script type="module" src="/assets/beta-shell.js?v=20260106-menu2"></script>
 </head>
-<body class="beta-body">
+<body class="beta-body"> 
 
   <!-- 상단 헤더 (베타 공통) -->
   <header class="huchu-header beta-header" role="banner">
