Update title and add script tag in HTML

--- a/beta/products/commercial-general.html
+++ b/beta/products/commercial-general.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>상가·사무실담보대출(일반담보대출) | 온투업 P2P 담보대출 상품정보 (베타)</title>
+  <title>상가·사무실담보대출(일반담보대출) | 온투업 P2P 담보대출 상품정보</title>
   <meta name="description" content="상가·사무실(근린생활시설)을 담보로 한 온투업(P2P) 일반담보대출 상품의 한도, 금리, 상환 방식, 후순위담보대출 구조를 정리한 베타 설명 페이지입니다. 상가담보대출, 근린생활시설담보대출, 보증금담보대출, 대부대환대출 비교.">
   <!-- 베타용: 검색엔진 인덱싱 방지 -->
   <meta name="robots" content="noindex, nofollow" />
 
   <link rel="stylesheet" href="/assets/styles.css?v=20251117-beta" />
+  <script type="module" src="/assets/beta-shell.js?v=20260106-menu2"></script>
 </head>
-<body class="beta-body">
+<body class="beta-body"> 
 
   <!-- 상단 헤더 (베타 공통) -->
   <header class="huchu-header beta-header" role="banner">
