Update navigation references in detached-auction.html

--- a/beta/products/detached-auction.html
+++ b/beta/products/detached-auction.html
@@ -9,8 +9,9 @@
   <meta name="robots" content="noindex, nofollow" />
 
   <link rel="stylesheet" href="/assets/styles.css?v=20251117-beta" />
+  <script type="module" src="/assets/beta-shell.js?v=20260106-menu2"></script>
 </head>
-<body class="beta-body">
+<body class="beta-body"> 
 
   <!-- 상단 헤더 (베타 공통) -->
   <header class="huchu-header beta-header" role="banner">
@@ -75,12 +76,12 @@
       </article>
     </section>
 
-    <!-- 담보대출계산기 안내: 히어로 바로 아래 -->
+    <!-- 후추 네비게이션 안내: 히어로 바로 아래 -->
     <section class="products-section">
       <div class="calculator-section-grid">
-        <!-- 왼쪽: 후추 담보대출 계산기 안내 -->
+        <!-- 왼쪽: 후추 네비게이션 안내 -->
         <article class="product-info-card calculator-card">
-          <h2 class="products-section__title">후추 담보대출 계산기로 확인하세요.</h2>
+          <h2 class="products-section__title">후추 네비게이션으로 확인하세요.</h2>
           <h3 style="margin-bottom:10px;">낙찰받은 부동산의 대출 가능성 확인</h3>
           <ul>
             <li>개인정보 입력 <strong>NO</strong></li>
