Update navigation references in commercial-general.html

--- a/beta/products/commercial-general.html
+++ b/beta/products/commercial-general.html
@@ -75,12 +75,12 @@
       </article>
     </section>
 
-    <!-- 담보대출계산기 안내: 히어로 바로 아래 -->
+       <!-- 후추 네비게이션 안내: 히어로 바로 아래 -->
     <section class="products-section">
       <div class="calculator-section-grid">
-        <!-- 왼쪽: 후추 담보대출 계산기 안내 -->
+        <!-- 왼쪽: 후추 네비게이션 안내 -->
         <article class="product-info-card calculator-card">
-          <h2 class="products-section__title">후추 담보대출 계산기로 확인하세요.</h2>
+          <h2 class="products-section__title">후추 네비게이션으로 확인하세요.</h2>
           <h3 style="margin-bottom:10px;">대출 승인 가능성 및 한도 체크 가능</h3>
           <ul>
             <li>개인정보 입력 <strong>NO</strong></li>
