--- a/beta/products/commercial-deposit.html
+++ b/beta/products/commercial-deposit.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>근린생활시설 임대보증금 반환대출 | 온투업 P2P 담보대출 상품정보 (베타)</title>
+  <title>근린생활시설 임대보증금 반환대출 | 온투업 P2P 담보대출 상품정보</title>
   <meta name="description" content="임대만료·전세 만기 등으로 기존 임차인에게 보증금을 반환하기 위한 온투업(P2P) 근린생활시설 임대보증금 반환대출 상품의 한도, 금리, 상환 방식, 후순위 구조를 정리한 베타 설명 페이지입니다. 근린생활시설임대보증금대출, 보증금반환대출, 전세보증금대출, 후순위담보대출 비교.">
   <!-- 베타용: 검색엔진 인덱싱 방지 -->
   <meta name="robots" content="noindex, nofollow" />
@@ -77,12 +77,12 @@
       </article>
     </section>
 
-    <!-- 담보대출계산기 안내: 히어로 바로 아래 -->
+    <!-- 후추 네비게이션 안내: 히어로 바로 아래 -->
     <section class="products-section">
       <div class="calculator-section-grid">
-        <!-- 왼쪽: 후추 담보대출 계산기 안내 -->
+        <!-- 왼쪽: 후추 네비게이션 안내 -->
         <article class="product-info-card calculator-card">
-          <h2 class="products-section__title">후추 담보대출 계산기로 확인하세요.</h2>
+          <h2 class="products-section__title">후추 네비게이션으로 확인하세요.</h2>
           <h3 style="margin-bottom:10px;">보증금·선순위 대출을 반영한 대출 가능성 확인</h3>
           <ul>
             <li>개인정보 입력 <strong>NO</strong></li>
