--- a/beta/products/apt-refinance.html
+++ b/beta/products/apt-refinance.html
@@ -77,12 +77,12 @@
       </article>
     </section>
 
-    <!-- 담보대출계산기 안내: 히어로 바로 아래 -->
+    <!-- 후추 네비게이션 안내: 히어로 바로 아래 -->
     <section class="products-section">
       <div class="calculator-section-grid">
-        <!-- 왼쪽: 후추 담보대출 계산기 안내 -->
+        <!-- 왼쪽: 후추 네비게이션 안내 -->
         <article class="product-info-card calculator-card">
-          <h2 class="products-section__title">후추 담보대출 계산기로 확인하세요.</h2>
+          <h2 class="products-section__title">후추 네비게이션으로 확인하세요.</h2>
           <h3 style="margin-bottom:10px;">기존 대출·시세·보증금을 반영한 대환 여력 가늠</h3>
           <ul>
             <li>개인정보 입력 <strong>NO</strong></li>
