--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>아파트담보대출(일반담보대출) | 온투업 P2P 주담대 상품정보 (베타)</title>
+  <title>아파트담보대출(일반담보대출) | 온투업 P2P 주담대 상품정보</title>
   <meta name="description" content="아파트를 담보로 한 온투업(P2P) 일반담보대출 상품의 한도, 금리, 상환 방식, 후순위주담대 구조를 정리한 베타 설명 페이지입니다. 아파트담보대출, 아파트대출한도, 아파트대출금리, 후순위주담대, 대부대환대출 비교.">
   <!-- 베타용: 검색엔진 인덱싱 방지 -->
   <meta name="robots" content="noindex, nofollow" />
@@ -75,12 +75,12 @@
       </article>
     </section>
 
-    <!-- 담보대출계산기 안내: 히어로 바로 아래 -->
+    <!-- 후추 네비게이션 안내: 히어로 바로 아래 -->
     <section class="products-section">
       <div class="calculator-section-grid">
-        <!-- 왼쪽: 후추 담보대출 계산기 안내 -->
+        <!-- 왼쪽: 후추 네비게이션 안내 -->
         <article class="product-info-card calculator-card">
-          <h2 class="products-section__title">후추 담보대출 계산기로 확인하세요.</h2>
+          <h2 class="products-section__title">후추 네비게이션으로 확인하세요.</h2>
           <h3 style="margin-bottom:10px;">대출 승인 가능성 및 한도 체크 가능</h3>
           <ul>
             <li>개인정보 입력 <strong>NO</strong></li>
