Update product section title for clarity

--- a/beta/products/apt-auction.html
+++ b/beta/products/apt-auction.html
@@ -81,7 +81,7 @@
       <div class="calculator-section-grid">
         <!-- 왼쪽: 후추 네비게이션 안내 -->
         <article class="product-info-card calculator-card">
-          <h2 class="products-section__title">후추 네비게이션을 활용하세요.</h2>
+          <h2 class="products-section__title">후추 네비게이션으로 확인하세요.</h2>
           <h3 style="margin-bottom:10px;">낙찰받은 아파트의 잔금·추가자금 등 확인</h3>
           <ul>
             <li>개인정보 입력 <strong>NO</strong></li>
