Update title and navigation links in HTML

--- a/beta/products/detached-deposit.html
+++ b/beta/products/detached-deposit.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>단독·다가구 임대보증금 반환대출 | 온투업 P2P 담보대출 상품정보 (베타)</title>
+  <title>단독·다가구 임대보증금 반환대출 | 온투업 P2P 담보대출 상품정보</title>
   <meta name="description" content="임대만료·전세 만기 등으로 기존 임차인에게 보증금을 반환하기 위한 온투업(P2P) 단독·다가구 임대보증금 반환대출 상품의 한도, 금리, 상환 방식, 후순위 구조를 정리한 베타 설명 페이지입니다. 단독·다가구임대보증금대출, 보증금반환대출, 전세보증금대출, 후순위담보대출 비교.">
   <!-- 베타용: 검색엔진 인덱싱 방지 -->
   <meta name="robots" content="noindex, nofollow" />
@@ -34,12 +34,11 @@
 </button>
 
         <div id="betaMenuPanel" class="beta-menu-panel hide">
-          <a class="beta-menu-link" href="/beta/">온투업 대출통계</a>
-          <a class="beta-menu-link" href="/beta/products/">온투업 대출상품정보</a>
-          <a class="beta-menu-link" href="/">담보대출 계산기</a>
+          <a class="beta-menu-link" href="/beta/ontu-stats.html">온투업 대출통계</a>
+          <a class="beta-menu-link" href="/beta/products/index.html">온투업 대출상품정보</a>
+          <a class="beta-menu-link" href="/beta/navi-beta.html">후추 네비게이션</a>
           <a class="beta-menu-link" href="/company.html">회사소개</a>
           <a class="beta-menu-link" href="/contact.html">광고문의</a>
-          <a class="beta-menu-link" href="/beta/admin-beta.html">관리자</a>
         </div>
       </div>
     </div>
