--- a/beta/products/detached-refinance.html
+++ b/beta/products/detached-refinance.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>아파트 대부대환대출 | 온투업 P2P 담보대출 상품정보 (베타)</title>
-  <meta name="description" content="기존 고금리 대부·캐피탈 아파트담보대출을 온투업(P2P) 담보대출로 갈아타기 위한 대부대환대출 상품의 한도, 금리, 상환 방식, 후순위 구조를 정리한 베타 설명 페이지입니다. 아파트대부대환대출, 고금리대환, 대부대환, 후순위담보대출 비교.">
+  <title>단독·다가구주택 대부대환대출 | 온투업 P2P 담보대출 상품정보 (베타)</title>
+  <meta name="description" content="기존 고금리 대부·캐피탈 단독·다가구주택담보대출을 온투업(P2P) 담보대출로 갈아타기 위한 대부대환대출 상품의 한도, 금리, 상환 방식, 후순위 구조를 정리한 베타 설명 페이지입니다. 단독·다가구주택대부대환대출, 고금리대환, 대부대환, 후순위담보대출 비교.">
   <!-- 베타용: 검색엔진 인덱싱 방지 -->
   <meta name="robots" content="noindex, nofollow" />
 
   <link rel="stylesheet" href="/assets/styles.css?v=20251117-beta" />
+  <script type="module" src="/assets/beta-shell.js?v=20260106-menu2"></script>
 </head>
-<body class="beta-body">
+<body class="beta-body"> 
 
   <!-- 상단 헤더 (베타 공통) -->
   <header class="huchu-header beta-header" role="banner">
@@ -47,12 +48,12 @@
     <!-- 히어로 영역 -->
     <section class="products-hero">
       <article class="product-info-card hero-card">
-        <h2>아파트 – 대부대환대출</h2>
+        <h2>단독·다가구주택 – 대부대환대출</h2>
 
         <p class="hero-intro">
-          온라인투자연계금융업(이하 ‘온투업’) 아파트 담보대출 상품 중
+          온라인투자연계금융업(이하 ‘온투업’) 단독·다가구주택 담보대출 상품 중
           <strong>대부대환대출</strong>에 관한 정보입니다.</br>
-          기존 <strong>고금리 대부업 아파트담보대출을</strong> 
+          기존 <strong>고금리 대부업 단독·다가구주택담보대출을</strong> 
           온투업 담보대출로 갈아타면서 금리·구조를 조정할 때 활용되는 상품입니다.
         </p>
 
@@ -75,12 +76,12 @@
       </article>
     </section>
 
-    <!-- 담보대출계산기 안내: 히어로 바로 아래 -->
+    <!-- 후추 네비게이션 안내: 히어로 바로 아래 -->
     <section class="products-section">
       <div class="calculator-section-grid">
-        <!-- 왼쪽: 후추 담보대출 계산기 안내 -->
+        <!-- 왼쪽: 후추 네비게이션 안내 -->
         <article class="product-info-card calculator-card">
-          <h2 class="products-section__title">후추 담보대출 계산기로 확인하세요.</h2>
+          <h2 class="products-section__title">후추 네비게이션으로 확인하세요.</h2>
           <h3 style="margin-bottom:10px;">기존 대출·시세·보증금을 반영한 대환 여력 가늠</h3>
           <ul>
             <li>개인정보 입력 <strong>NO</strong></li>
@@ -88,7 +89,7 @@
             <li>간단한 정보로도 <strong>OK</strong></li>
             <li class="calculator-last-li">
               <span>
-                KB시세, 선순위 대출, 임대보증금 등을 반영해
+                감정가, 선순위 대출, 임대보증금 등을 반영해
                 <strong>대부대환 및 추가 대출 가능 여력</strong>을 가늠할 수 있습니다.
               </span>
               <div class="product-card__buttons">
@@ -128,14 +129,14 @@
         <ul style="margin-bottom:14px;">
           <li>만 19세 이상 내국인</li>
           <li>신용점수 (NICE) 350점 또는 (KCB) 454점 이상 고객</li>
-          <li>본인 또는 배우자 명의로 아파트를 소유 중인 고객</li>
-          <li>아파트를 담보로 고금리 대부업 대출을 이용 중인 고객</li>
+          <li>본인 또는 배우자 명의로 단독·다가구주택를 소유 중인 고객</li>
+          <li>단독·다가구주택를 담보로 고금리 대부업 대출을 이용 중인 고객</li>
           <li>본인 혹은 배우자 소득이 있는 고객</li>
         </ul>
 
         <h3>대출한도</h3>
         <ul style="margin-bottom:14px;">
-          <li>최소 1천만원 ~ 최대 70억원</li>
+          <li>최소 2천만원 ~ 최대 70억원</li>
         </ul>
 
         <h3>대출기간</h3>
@@ -150,7 +151,7 @@
 
         <h3>자금 용도</h3>
         <ul style="margin-bottom:14px;">
-          <li>기존 대부업 아파트담보대출 상환(대환)</li>
+          <li>기존 대부업 단독·다가구주택담보대출 상환(대환)</li>
           <li>추가 운영자금·생활자금 대출 (허용 한도 내에서)</li>
         </ul>
 
@@ -186,14 +187,14 @@
       </article>
     </section>
 
-    <!-- 2. 이런 경우 아파트 대부대환대출을 찾습니다. -->
+    <!-- 2. 이런 경우 단독·다가구주택 대부대환대출을 찾습니다. -->
     <section class="products-section products-section--info">
       <h2 class="products-section__title">2. 이런 경우 대부업 대환대출을 찾습니다.</h2>
       <div class="products-info-grid">
         <article class="product-info-card">
           <h3>고금리 이자 부담이 너무 클 때</h3>
           <p>
-            대부업·캐피탈 아파트담보대출 금리가 <strong>연 18% 안팎까지 올라</strong>
+            대부업·캐피탈 단독·다가구주택 담보대출 금리가 <strong>연 18% 안팎까지 올라</strong>
             이자 부담이 큰 경우, 상대적으로 낮은 금리의
             온투업 담보대출로 대환을 검토하는 사례가 있있습니다.
           </p>
@@ -202,7 +203,7 @@
         <article class="product-info-card">
           <h3>중도상환수수료 적용 기간이 지났을때</h3>
           <p>
-            온투업과 같이 대부업은 취급수수료(플랫폼수수료)가 별도로 없고
+            대부업은 온투업과 같이 별도의 플랫폼수수료가 없으나
             <strong>중도상환수수료</strong>를 3%~5%를 적용하고 있어
             중도상환수수료 적용 기간이 지나면 온투업으로 리파이낸싱을 통해
             이자 부담을 줄이고자 활용하기도 합니다.
@@ -232,7 +233,7 @@
           </p>
           <p>
             기준시세는 부동산 종류별로 각각 다른 기준이 적용됩니다.
-            보통 아파트의 경우는 KB시세를, 빌라/연립의 경우 하우스머치가 적용됩니다.
+            보통 단독·다가구주택의 경우는 KB시세를, 빌라/연립의 경우 하우스머치가 적용됩니다.
           </p>
           <p>
             그 외의 경우 각 온투업사의 자체 감정으로 기준시세를 결정합니다.
@@ -242,7 +243,7 @@
         <article class="product-info-card">
           <h3>Q. 금리는 어느 정도까지 내려가나요?</h3>
           <p>
-            대출자의 소득, 아파트 위치·담보가치, 기존 대출 조건 등에 따라
+            대출자의 소득, 단독·다가구주택 위치·담보가치, 기존 대출 조건 등에 따라
             <strong>적용 금리는 크게 달라질 수 있습니다.</strong>
           </p>
           <p>
@@ -253,12 +254,12 @@
         </article>
 
         <article class="product-info-card">
-          <h3>Q. 후추 담보대출 계산기로 대부대환 가능성도 볼 수 있나요?</h3>
+          <h3>Q. 후추 네비게이션로 대부대환 가능성도 볼 수 있나요?</h3>
           <p>
             네. 가능합니다.</p>
           <p>
             기존 대부·캐피탈 대출을 <strong>선순위 또는 기존 대출</strong> 항목에 입력하고
-            KB시세, 임대보증금 등을 함께 기재하면
+            시세, 임대보증금 등을 함께 기재하면
             <strong>추가 대출 가능금액</strong>과 함께
             대환 여력이 어느 정도인지 사전에 가늠해 볼 수 있습니다.
           </p>
@@ -269,7 +270,7 @@
     <!-- 해시태그 -->
     <section class="products-section">
       <div class="product-card__tags">
-        <span class="product-tag">#아파트대부대환대출</span>
+        <span class="product-tag">#단독·다가구주택대부대환대출</span>
         <span class="product-tag">#대부대환대출</span>
         <span class="product-tag">#고금리대환</span>
         <span class="product-tag">#대부업대환</span>
@@ -293,6 +294,7 @@
 
   </main>
 
+<!-- 푸터 -->
   <footer class="beta-footer" role="contentinfo">
     <div class="beta-footer__top">
       <a href="/company.html">회사소개</a>
@@ -301,19 +303,22 @@
     </div>
     <div class="beta-footer__bottom">
       <div class="beta-footer__brand">
-        <img src="/assets/logo/huchu-logo-white.png"
-             alt="HUCHU 로고"
-             class="beta-footer__logo-img" />
+        <img
+          src="/assets/logo/huchu-logo-white.png"
+          alt="HUCHU 로고"
+          class="beta-footer__logo-img"
+        />
         <span class="beta-footer__logo-text">HUCHU</span>
       </div>
       <div class="beta-footer__info">
-          <p>상호: 후추랩 | 대표: 장현성</p>
-          <p>주소: 경기도 고양시 일산동구 정발산로 15, 4층 411호</p>
-          <p>E-MAIL: support@huchulab.com | 사업자번호: 546-03-03940</p>
-          <p>2025 © HUCHU. ALL RIGHTS RESERVED.</p>
+        <p>상호: 후추랩 | 대표: 장현성</p>
+        <p>주소: 경기도 고양시 일산동구 정발산로 15, 4층 411호</p>
+        <p>E-MAIL: support@huchulab.com | 사업자번호: 546-03-03940</p>
+        <p>2025 © HUCHU. ALL RIGHTS RESERVED.</p>
       </div>
     </div>
   </footer>
+
 
   <script>
     // 베타 메뉴 토글
