--- a/beta/products/land-forest-refinance.html
+++ b/beta/products/land-forest-refinance.html
@@ -137,7 +137,7 @@
 
         <h3>대출한도</h3>
         <ul style="margin-bottom:14px;">
-          <li>최소 1천만원 ~ 최대 70억원</li>
+          <li>최소 2천만원 ~ 최대 70억원</li>
         </ul>
 
         <h3>대출기간</h3>
@@ -204,7 +204,7 @@
         <article class="product-info-card">
           <h3>중도상환수수료 적용 기간이 지났을때</h3>
           <p>
-            온투업과 같이 대부업은 취급수수료(플랫폼수수료)가 별도로 없고
+            대부업은 온투업과 같이 별도의 플랫폼수수료가 없으나
             <strong>중도상환수수료</strong>를 3%~5%를 적용하고 있어
             중도상환수수료 적용 기간이 지나면 온투업으로 리파이낸싱을 통해
             이자 부담을 줄이고자 활용하기도 합니다.
@@ -234,7 +234,7 @@
           </p>
           <p>
             기준시세는 부동산 종류별로 각각 다른 기준이 적용됩니다.
-            토지·임야 경우 각 업체별 자체 감정으로 적용합니다.
+            아파트는 KB시세, 빌라·다세대의 경우 하우스머치 시세를 적용합니다.
           </p>
           <p>
             그 외의 경우 각 온투업사의 자체 감정으로 기준시세를 결정합니다.
