--- a/beta/navi-beta.html
+++ b/beta/navi-beta.html
@@ -66,10 +66,11 @@
 <!-- 인트로 -->
 <section class="beta-section navi-intro-section">
   <div class="beta-card beta-card--wide navi-intro-card">
-    <picture>
+    <picture class="navi-intro-picture">
       <source
-        media="(max-width: 600px)"
+        media="(max-width: 768px)"
         srcset="/assets/media/navi-intro-banner.mobile.png"
+        type="image/png"
       />
       <img
         class="navi-intro-banner"
