--- a/beta/navi-beta.html
+++ b/beta/navi-beta.html
@@ -23,7 +23,7 @@
   </style>
 
 </head>
-<body class="beta-body">
+<body class="beta-body beta-sticky-footer">
 
   <!-- 상단 헤더 -->
   <header class="huchu-header beta-header" role="banner">
