--- a/beta/navi-beta.html
+++ b/beta/navi-beta.html
@@ -83,14 +83,11 @@
       />
     </picture>
   </div>
-</section>
+      </section>
 
       <!-- 1. 대출 상품군 선택 -->
       <section class="beta-section navi-section" id="navi-step1">
-        <div class="navi-section-title">1. 대출 상품군 선택</div>
-        <div class="navi-section-sub">
-          찾고 계신 대출의 큰 종류를 선택해주세요.
-        </div>
+        <div class="navi-section-title navi-step1-title">어떤 대출이 필요하세요?</div>
         <div class="navi-chip-group" id="naviLoanCategoryChips">
           <button type="button" class="navi-chip" data-main-cat="부동산담보대출">부동산 담보대출</button>
           <button type="button" class="navi-chip" data-main-cat="개인신용대출">개인신용대출</button>
@@ -101,9 +98,6 @@
           <button type="button" class="navi-chip" data-main-cat="온라인선정산">온라인선정산</button>
           <button type="button" class="navi-chip" data-main-cat="전자어음">전자어음</button>
         </div>
-        <p class="navi-help">
-          ※ 부동산 담보대출을 선택하면 3~6단계에서 부동산·LTV 기준까지 함께 계산합니다.
-        </p>
       </section>
 
       <!-- 2. 지역 선택 -->
