--- a/beta/products/index.html
+++ b/beta/products/index.html
@@ -49,14 +49,22 @@
   <main class="products-main">
     <!-- 히어로 인트로 -->
     <section class="products-hero">
-      <h1 class="products-hero__title">온라인투자연계금융업 대출상품 정보</h1>
-      <p class="products-hero__desc">
-        온투업(P2P)에서 취급중인 대출상품을 확인해 보세요.
-      </p>
-      <p class="products-hero__note">
-        정확한 대출조건은 해당 대출기관에서 안내해 드립니다.
-      </p>
-    </section>
+
+    <div class="products-intro-card">
+      <picture class="products-intro-picture">
+        <source media="(max-width: 768px)" srcset="/assets/media/navi-intro-banner.mobile.png" />
+        <img
+          class="products-intro-banner"
+          src="/assets/media/navi-intro-banner.png"
+          alt="후추 네비게이션"
+          width="2500"
+          height="300"
+          loading="eager"
+          decoding="async"
+        />
+      </picture>
+    </div>
+  </section>
 
     <!-- 상품 카드 섹션 -->
     <section class="products-section">
