--- a/beta/products/index.html
+++ b/beta/products/index.html
@@ -18,7 +18,7 @@
   <header class="huchu-header beta-header" role="banner">
     <div class="huchu-header__inner beta-header__inner">
       <a href="/beta/index.html" class="huchu-logo" aria-label="후추 Huchu 홈">
-        <img class="logo-img" src="/assets/logo/huchu-logo.png" alt="후추 로고" />
+        <img class="logo-img" src="/assets/logo/huchu-logo.png" alt="대출상품 안내 배너" />
         <span class="logo-fallback">
           <span class="logo-mark">%</span>
           <span class="logo-text">후추 Huchu</span>
@@ -52,10 +52,10 @@
 
     <div class="products-intro-card">
       <picture class="products-intro-picture">
-        <source media="(max-width: 768px)" srcset="/assets/media/navi-intro-banner.mobile.png" />
+        <source media="(max-width: 768px)" srcset="/assets/media/products-intro-banner.mobile.png" />
         <img
           class="products-intro-banner"
-          src="/assets/media/navi-intro-banner.png"
+          src="/assets/media/products-intro-banner.png"
           alt="후추 네비게이션"
           width="2500"
           height="300"
