--- a/beta/navi-beta.html
+++ b/beta/navi-beta.html
@@ -87,7 +87,7 @@
 
       <!-- 1. 대출 상품군 선택 -->
       <section class="beta-section navi-section" id="navi-step1">
-        <div class="navi-section-title navi-step1-title">어떤 대출이 필요하세요?</div>
+        <div class="navi-section-title navi-step1-title">어떤 대출이 필요하세요</div>
         <div class="navi-chip-group" id="naviLoanCategoryChips">
           <button type="button" class="navi-chip" data-main-cat="부동산담보대출">부동산 담보대출</button>
           <button type="button" class="navi-chip" data-main-cat="개인신용대출">개인신용대출</button>
