--- a/beta/navi-beta.html
+++ b/beta/navi-beta.html
@@ -102,17 +102,17 @@
 
       <!-- 2. 지역 선택 -->
       <section class="beta-section navi-section hide" id="navi-step2">
-        <div class="navi-section-title">2. 지역 선택</div>
+        <div class="navi-section-title">지역을 선택하세요</div>
         <div class="navi-section-sub">담보 또는 사업장이 위치한 지역을 선택해주세요.</div>
         <div class="navi-chip-group" id="naviRegionChips">
           <button type="button" class="navi-chip" data-region="서울">서울</button>
           <button type="button" class="navi-chip" data-region="경기">경기</button>
           <button type="button" class="navi-chip" data-region="인천">인천</button>
-          <button type="button" class="navi-chip" data-region="충청도">충청</button>
-          <button type="button" class="navi-chip" data-region="전라도">전라</button>
-          <button type="button" class="navi-chip" data-region="경상도">경상</button>
-          <button type="button" class="navi-chip" data-region="강원도">강원</button>
-          <button type="button" class="navi-chip" data-region="제주도">제주</button>
+          <button type="button" class="navi-chip" data-region="충청">충청</button>
+          <button type="button" class="navi-chip" data-region="전라">전라</button>
+          <button type="button" class="navi-chip" data-region="경상">경상</button>
+          <button type="button" class="navi-chip" data-region="강원">강원</button>
+          <button type="button" class="navi-chip" data-region="제주">제주</button>
         </div>
 
         <!-- (추가) 세부지역 LTV Up (서울/경기/인천 등) -->
@@ -121,6 +121,16 @@
           <div class="navi-subregion-sub">해당 세부지역을 선택하면, 업체별 설정된 LTV Up%가 LTV 최대치에 가산됩니다.</div>
           <div class="navi-chip-group navi-chip-group--sub" id="naviSubregionChips"></div>
         </div>
+
+        <div id="naviStep2Actions">
+          <button type="button" id="naviStep2BackBtn">
+            <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+              <path d="M14.7 6.3a1 1 0 0 1 0 1.4L11.41 11H20a1 1 0 1 1 0 2h-8.59l3.29 3.29a1 1 0 1 1-1.4 1.42l-5-5a1 1 0 0 1 0-1.42l5-5a1 1 0 0 1 1.4 0z"/>
+            </svg>
+            <span>Back</span>
+          </button>
+        </div>
+
 
       </section>
 
